validate_formats now defaults to true
This reflects new understandings of how "$vocabulary": [ <vocab uri>: false ]
should work, as discussed in
https://github.com/json-schema-org/json-schema-spec/issues/1020#issuecomment-730699389
and https://github.com/json-schema-org/json-schema-spec/issues/1019

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
+          - the default value for "validate_formats" is now true, to reflect
+            the most typical usecase.
 
 0.019     2020-12-08 18:40:10Z
           - further improvements to the "terse" output format
