increment $VERSION after 0.020 release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Draft201909
 
+{{$NEXT}}
+
 0.020     2021-01-02 17:12:09Z
           - the default value for "validate_formats" is now true, to reflect
             the most typical usecase.
