rudimentary Dialect object
There is no change to $schema support (only the draft 2019-09 metaschema is
supported still). Keyword implementations for the deprecated keywords
"definitions" and "dependencies" (which just produced warnings when evaluated)
have been removed for simplicity.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
+          - addition of JSON::Schema::Draft201909::Dialect, for customizing
+            vocabulary usage
 
 0.023     2021-02-21 18:36:32Z
           - fix "try/catch is experimental" warnings in perl 5.33.7
