JSON-Schema-Draft201909-0.021
          - [Pp]roperties$ keywords now always produce annotations when
            evaluating successfully, even if there were no matching properties
          - added the "strict_basic" output format, for strict (but incorrect)
            adherence to the draft 2019-09 specification

--- a/README.pod
+++ b/README.pod
@@ -10,7 +10,7 @@ JSON::Schema::Draft201909 - Validate data against a schema
 
 =head1 VERSION
 
-version 0.020
+version 0.021
 
 =head1 SYNOPSIS
 
@@ -33,8 +33,8 @@ version of the specification.
 
 =head2 output_format
 
-One of: C<flag>, C<basic>, C<detailed>, C<verbose>, C<terse>. Defaults to C<basic>. Passed to
-L<JSON::Schema::Draft201909::Result/output_format>.
+One of: C<flag>, C<basic>, C<strict_basic>, C<detailed>, C<verbose>, C<terse>. Defaults to C<basic>.
+Passed to L<JSON::Schema::Draft201909::Result/output_format>.
 
 =head2 short_circuit
 
@@ -349,7 +349,7 @@ loading schema documents from a local web application (e.g. L<Mojolicious>)
 
 =item *
 
-additional output formats beyond C<flag>, C<basic> and C<terse> (L<https://json-schema.org/draft/2019-09/json-schema-core.html#rfc.section.10>)
+additional output formats beyond C<flag>, C<basic>, C<strict_basic>, and C<terse> (L<https://json-schema.org/draft/2019-09/json-schema-core.html#rfc.section.10>)
 
 =item *
 
@@ -360,7 +360,8 @@ examination of the C<$schema> keyword for deviation from the standard metaschema
 Additionally, some small errors in the specification (which have been fixed in the next draft
 specification version) are fixed here rather than implementing the precise but unintended behaviour,
 most notably in the use of json pointers rather than fragment-only URIs in C<instanceLocation> and
-C<keywordLocation> in annotations and errors.
+C<keywordLocation> in annotations and errors. (Use the C<strict_basic>
+L<JSON::Schema::Draft201909/output_format> to revert this change.)
 
 =head1 SECURITY CONSIDERATIONS
 
