--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
+          - fix "try/catch is experimental" warnings in perl 5.33.7
 
 0.022     2021-02-07 17:33:14Z
           - fix erroneous use of postfix dereference (closes #42).
