--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Draft201909
 
+{{$NEXT}}
+
 0.023     2021-02-21 18:36:32Z
           - fix "try/catch is experimental" warnings in perl 5.33.7
 
