--- a/README.pod
+++ b/README.pod
@@ -10,7 +10,7 @@ JSON::Schema::Draft201909 - Validate data against a schema
 
 =head1 VERSION
 
-version 0.023
+version 0.024
 
 =head1 SYNOPSIS
 
@@ -53,10 +53,8 @@ other, or badly-written schemas that could be optimized. Defaults to 50.
 
 =head2 validate_formats
 
-When false, the C<format> keyword will be treated as an annotation only (that is, no evaluation
-failure will result if the format of the data string is not as specified). When true, the C<format>
-keyword will be treated as an assertion, where failure is possible.
-Defaults to true.
+When true, the C<format> keyword will be treated as an assertion, not merely an annotation. Defaults
+to false.
 
 =head2 format_validations
 
@@ -159,7 +157,7 @@ The result is a L<JSON::Schema::Draft201909::Result> object, which can also be u
 =head2 traverse
 
   $result = $js->traverse($schema_data);
-  $result = $js->traverse($schema_data, { canonical_schema_uri => 'http://foo.com' });
+  $result = $js->traverse($schema_data, { canonical_schema_uri => 'http://example.com' });
 
 Traverses the provided schema data without evaluating it against any instance data. Returns the
 internal state object accumulated during the traversal, including any identifiers found therein, and
@@ -378,7 +376,7 @@ SOURCES.>
 
 =item *
 
-L<https://json-schema.org/>
+L<https://json-schema.org>
 
 =item *
 
@@ -391,6 +389,10 @@ L<RFC3986: Uniform Resource Identifier (URI): Generic Syntax|https://tools.ietf.
 =item *
 
 L<Test::JSON::Schema::Acceptance>
+
+=item *
+
+L<https://json-schema.org/draft/2019-09/release-notes.html>
 
 =back
 
