--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
+          - minor changes to error strings to distinguish between issues that
+            can be determined from static inspection of schema(s), and those
+            that only arise during runtime evaluation (such as URIs that
+            map to missing schema documents, or inconsistent configuration
+            values).
 
 0.024     2021-03-23 21:53:42Z
           - the default value for "validate_formats" is once again false (it
