--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Draft201909
 
+{{$NEXT}}
+
 0.025     2021-03-30 05:36:14Z
           - minor changes to error strings to distinguish between issues that
             can be determined from static inspection of schema(s), and those
