when evaluating a subschema, start with an empty set of annotations
This prevents annotations collected so far from being improperly used by
unevaluatedItems, unevaluatedProperties when only annotations from sibling
keywords (or children of sibling keywords) should be used.

See https://stackoverflow.com/questions/66936884/deeply-nested-unevaluatedproperties-and-their-expectations
and https://github.com/json-schema-org/JSON-Schema-Test-Suite/pull/472

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
+          - fix scoping of annotations from uncle keywords (siblings of the
+            schema's parent) that were improperly visible to unevaluatedItems,
+            unevaluatedProperties
 
 0.025     2021-03-30 05:36:14Z
           - minor changes to error strings to distinguish between issues that
