--- a/README.pod
+++ b/README.pod
@@ -10,7 +10,7 @@ JSON::Schema::Draft201909 - Validate data against a schema
 
 =head1 VERSION
 
-version 0.025
+version 0.026
 
 =head1 SYNOPSIS
 
@@ -388,7 +388,11 @@ L<RFC3986: Uniform Resource Identifier (URI): Generic Syntax|https://tools.ietf.
 
 =item *
 
-L<Test::JSON::Schema::Acceptance>
+L<Test::JSON::Schema::Acceptance>: contains the official JSON Schema test suite
+
+=item *
+
+L<JSON::Schema::Tiny>: a more minimal implementation of the specification, with fewer dependencies
 
 =item *
 
