--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
           - fixed error strings used for failing "dependentRequired"
+          - in terse output format, do not discard non-summary errors from
+            schema-form of items
 
 0.026     2021-04-08 20:13:27Z
           - fix scoping of annotations from uncle keywords (siblings of the
