tighten validation of date-time, date, time formats
- a leap-second must be considered valid in "time", even though there was no
leap second on 2000-01-01
- leap seconds only occur at 23:59:60Z, so make adjustments for timezone
- T and Z are case-insensitive in RFC3339

--- a/Changes
+++ b/Changes
@@ -7,6 +7,7 @@ Revision history for JSON-Schema-Draft201909
           - keywords in the applicator vocabulary are now applied before the
             keywords in the validation vocabulary (true/false results are not
             affected, but the order of annotations and errors will change)
+          - improved validation of the "date-time", "date" and "time" formats
 
 0.026     2021-04-08 20:13:27Z
           - fix scoping of annotations from uncle keywords (siblings of the
