--- a/README.pod
+++ b/README.pod
@@ -6,17 +6,17 @@
 
 =head1 NAME
 
-JSON::Schema::Draft201909 - Validate data against a schema
+JSON::Schema::Modern - Validate data against a schema
 
 =head1 VERSION
 
-version 0.028
+version 0.512
 
 =head1 SYNOPSIS
 
-  use JSON::Schema::Draft201909;
+  use JSON::Schema::Modern;
 
-  $js = JSON::Schema::Draft201909->new(
+  $js = JSON::Schema::Modern->new(
     output_format => 'flag',
     ... # other options
   );
@@ -31,10 +31,27 @@ version of the specification.
 
 =head1 CONFIGURATION OPTIONS
 
+=head2 specification_version
+
+Indicates which version of the JSON Schema specification is used during evaluation. When not set,
+this value is derived from the C<$schema> keyword in the schema used in evaluation, or defaults to
+the latest (supported) version.
+
+May be one of:
+
+=over 4
+
+
+
+=back
+
+* L<C<draft2019-09>|https://json-schema.org/specification-links.html#2019-09-formerly-known-as-draft-8>,
+  corresponding to metaschema C<https://json-schema.org/draft/2019-09/schema>.
+
 =head2 output_format
 
 One of: C<flag>, C<basic>, C<strict_basic>, C<detailed>, C<verbose>, C<terse>. Defaults to C<basic>.
-Passed to L<JSON::Schema::Draft201909::Result/output_format>.
+Passed to L<JSON::Schema::Modern::Result/output_format>.
 
 =head2 short_circuit
 
@@ -69,7 +86,7 @@ number, or integer) the instance value must be for the format validation to be c
 =head2 collect_annotations
 
 When true, annotations are collected from keywords that produce them, when validation succeeds.
-These annotations are available in the returned result (see L<JSON::Schema::Draft201909::Result>).
+These annotations are available in the returned result (see L<JSON::Schema::Modern::Result>).
 Defaults to false.
 
 =head2 annotate_unknown_keywords
@@ -104,7 +121,7 @@ a Perl data structure, such as what is returned from a JSON decode operation,
 
 =item *
 
-a L<JSON::Schema::Draft201909::Document> object,
+a L<JSON::Schema::Modern::Document> object,
 
 =item *
 
@@ -116,7 +133,7 @@ Optionally, a hashref can be passed as a third parameter which allows changing t
 L</short_circuit>, L</collect_annotations>, L</annotate_unknown_keywords> and/or
 L</validate_formats> settings for just this evaluation call.
 
-The result is a L<JSON::Schema::Draft201909::Result> object, which can also be used as a boolean.
+The result is a L<JSON::Schema::Modern::Result> object, which can also be used as a boolean.
 
 =head2 evaluate
 
@@ -139,7 +156,7 @@ a Perl data structure, such as what is returned from a JSON decode operation,
 
 =item *
 
-a L<JSON::Schema::Draft201909::Document> object,
+a L<JSON::Schema::Modern::Document> object,
 
 =item *
 
@@ -152,7 +169,7 @@ L</short_circuit>, L</collect_annotations>, L</annotate_unknown_keywords> and/or
 L</validate_formats> settings for just this
 evaluation call.
 
-The result is a L<JSON::Schema::Draft201909::Result> object, which can also be used as a boolean.
+The result is a L<JSON::Schema::Modern::Result> object, which can also be used as a boolean.
 
 =head2 traverse
 
@@ -171,11 +188,11 @@ experimental and is highly likely to change in the future.
 For example, to find the resolved targets of all C<$ref> keywords in a schema document:
 
   my @refs;
-  JSON::Schema::Draft201909->new->traverse($schema, {
+  JSON::Schema::Modern->new->traverse($schema, {
     callbacks => {
       '$ref' => sub ($schema, $state) {
         push @refs, Mojo::URL->new($schema->{'$ref'})
-          ->to_abs(JSON::Schema::Draft201909::Utilities::canonical_schema_uri($state));
+          ->to_abs(JSON::Schema::Modern::Utilities::canonical_schema_uri($state));
       }
     },
   });
@@ -187,7 +204,7 @@ For example, to find the resolved targets of all C<$ref> keywords in a schema do
   $js->add_schema($schema);
   $js->add_schema($document);
 
-Introduces the (unblessed, nested) Perl data structure or L<JSON::Schema::Draft201909::Document>
+Introduces the (unblessed, nested) Perl data structure or L<JSON::Schema::Modern::Document>
 object, representing a JSON Schema, to the implementation, registering it under the indicated URI if
 provided (and if not, C<''> will be used if no other identifier can be found within).
 
@@ -196,9 +213,9 @@ before calling L</evaluate>, other than the standard metaschemas which are loade
 as needed.
 
 Returns C<undef> if the resource could not be found;
-if there were errors in the document, will die with a L<JSON::Schema::Draft201909::Result> object
+if there were errors in the document, will die with a L<JSON::Schema::Modern::Result> object
 containing the errors;
-otherwise returns the L<JSON::Schema::Draft201909::Document> that contains the added schema.
+otherwise returns the L<JSON::Schema::Modern::Document> that contains the added schema.
 
 =head2 get
 
@@ -359,7 +376,7 @@ Additionally, some small errors in the specification (which have been fixed in t
 specification version) are fixed here rather than implementing the precise but unintended behaviour,
 most notably in the use of json pointers rather than fragment-only URIs in C<instanceLocation> and
 C<keywordLocation> in annotations and errors. (Use the C<strict_basic>
-L<JSON::Schema::Draft201909/output_format> to revert this change.)
+L<JSON::Schema::Modern/output_format> to revert this change.)
 
 =head1 SECURITY CONSIDERATIONS
 
@@ -406,7 +423,7 @@ L<Understanding JSON Schema|https://json-schema.org/understanding-json-schema>: 
 
 =head1 SUPPORT
 
-Bugs may be submitted through L<https://github.com/karenetheridge/JSON-Schema-Draft201909/issues>.
+Bugs may be submitted through L<https://github.com/karenetheridge/JSON-Schema-Modern/issues>.
 
 I am also usually active on irc, as 'ether' at C<irc.perl.org> and C<irc.libera.chat>.
 
