12 bits is large enough to not produce the expected overflow
http://www.cpantesters.org/cpan/report/d1a4dd18-ca7c-11eb-932e-240466f710c6
http://www.cpantesters.org/cpan/report/2464b1aa-ca7c-11eb-8dc8-abf665f710c6

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - skip acceptance test for integer overflow when nvsize is too
+            large to produce the expected error
 
 0.512     2021-06-09 02:29:23Z
           - distribution has been renamed from JSON-Schema-Draft201909 to
