--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.513     2021-06-26 19:45:51Z
           - skip acceptance test for integer overflow when nvsize is too
             large to produce the expected error
