--- a/README.pod
+++ b/README.pod
@@ -10,7 +10,7 @@ JSON::Schema::Modern - Validate data against a schema
 
 =head1 VERSION
 
-version 0.513
+version 0.514
 
 =head1 SYNOPSIS
 
@@ -35,7 +35,7 @@ version of the specification.
 
 Indicates which version of the JSON Schema specification is used during evaluation. When not set,
 this value is derived from the C<$schema> keyword in the schema used in evaluation, or defaults to
-the latest (supported) version (draft2010-09). When left unset, the use of C<$schema> keywords in
+the latest (supported) version (draft2019-09). When left unset, the use of C<$schema> keywords in
 the schema is permitted, to switch between draft versions.
 
 May be one of:
@@ -104,16 +104,15 @@ Defaults to false (for now).
 
 =head2 evaluate_json_string
 
-  $result = $js->evaluate_json_string($data_as_json_string, $schema_data);
-  $result = $js->evaluate_json_string($data_as_json_string, $schema_data, { collect_annotations => 1});
+  $result = $js->evaluate_json_string($data_as_json_string, $schema);
+  $result = $js->evaluate_json_string($data_as_json_string, $schema, { collect_annotations => 1});
 
 Evaluates the provided instance data against the known schema document.
 
 The data is in the form of a JSON-encoded string (in accordance with
 L<RFC8259|https://tools.ietf.org/html/rfc8259>). B<The string is expected to be UTF-8 encoded.>
 
-The schema must represent a JSON Schema that respects the Draft 2019-09 meta-schema at
-L<https://json-schema.org/draft/2019-09/schema>, in one of these forms:
+The schema must be in one of these forms:
 
 =over 4
 
@@ -139,16 +138,15 @@ The result is a L<JSON::Schema::Modern::Result> object, which can also be used a
 
 =head2 evaluate
 
-  $result = $js->evaluate($instance_data, $schema_data);
-  $result = $js->evaluate($instance_data, $schema_data, { short_circuit => 0 });
+  $result = $js->evaluate($instance_data, $schema);
+  $result = $js->evaluate($instance_data, $schema, { short_circuit => 0 });
 
 Evaluates the provided instance data against the known schema document.
 
 The data is in the form of an unblessed nested Perl data structure representing any type that JSON
 allows: null, boolean, string, number, object, array. (See L</TYPES> below.)
 
-The schema must represent a JSON Schema that respects the Draft 2019-09 meta-schema at
-L<https://json-schema.org/draft/2019-09/schema>, in one of these forms:
+The schema must be in one of these forms:
 
 =over 4
 
@@ -175,10 +173,10 @@ The result is a L<JSON::Schema::Modern::Result> object, which can also be used a
 
 =head2 traverse
 
-  $result = $js->traverse($schema_data);
-  $result = $js->traverse($schema_data, { initial_schema_uri => 'http://example.com' });
+  $result = $js->traverse($schema);
+  $result = $js->traverse($schema, { initial_schema_uri => 'http://example.com' });
 
-Traverses the provided schema data without evaluating it against any instance data. Returns the
+Traverses the provided schema without evaluating it against any instance data. Returns the
 internal state object accumulated during the traversal, including any identifiers found therein, and
 any errors found during parsing. For internal purposes only.
 
@@ -215,8 +213,7 @@ before calling L</evaluate>, other than the standard metaschemas which are loade
 as needed.
 
 Returns C<undef> if the resource could not be found;
-if there were errors in the document, will die with a L<JSON::Schema::Modern::Result> object
-containing the errors;
+if there were errors in the document, will die with these errors;
 otherwise returns the L<JSON::Schema::Modern::Document> that contains the added schema.
 
 =head2 get
@@ -420,6 +417,8 @@ L<JSON::Schema::Tiny>: a more minimal implementation of the specification, with 
 =item *
 
 L<https://json-schema.org/draft/2019-09/release-notes.html>
+
+# L<https://json-schema.org/draft-07/json-schema-release-notes.html>
 
 =item *
 
