--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.515     2021-08-03 04:07:02Z
           - no longer calling a keyword's callback during traverse() if that
             keyword has an error
