increment $VERSION after 0.516 release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.516     2021-08-14 19:53:16Z
           - fix email format tests on older prereqs
           - avoid errors when enabling validate_formats before evaluating but
