skip regex tests on perls with an old Unicode version
e.g. http://www.cpantesters.org/cpan/report/32d59c46-07fc-11ec-bc66-57723b537541

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - skip some regex tests when Unicode library is too old for those
+            character classes being tested
 
 0.517     2021-08-28 04:34:17Z
           - restore some optional modules used for format validation to the
