fix tests that rely on the optional Time::Moment
e.g. http://www.cpantesters.org/cpan/report/2a4159bc-198b-11ec-bc66-57723b537541

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - fix tests that were relying on an optional prereq
 
 0.518     2021-09-18 22:00:42Z
           - skip some regex tests when Unicode library is too old for those
