--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - support arbitrary metaschemas in the "$schema" keyword
 
 0.519     2021-09-21 03:56:13Z
           - fix tests that were relying on an optional prereq
