delay looking up vocabulary classes until actually using the metaschema
e.g. when using a metaschema as a subschema via $ref, in which case its
$vocabulary entries are not used, so the vocabulary URIs do not need to be
implemented as classes.

This also means we no longer store the metaschema vocabulary classes on the
document object itself -- we delay calculating these until traversing a schema
that references this schema as a metaschema, where we can cache this information
on the evaluator itself.

Also fix the use of a metaschema that doesn't use the $vocabulary keyword at all
(e.g. when making a certain keyword definition more strict, or adding syntax
to annotation-only keywords).

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - fix issues when referencing a schema in a metaschema:
+            whose vocabulary is not known, but its keywords can still be
+            validated, or which does not use the $vocabulary keyword at all
 
 0.520     2021-09-27 05:56:11Z
           - support arbitrary metaschemas in the "$schema" keyword
