--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.521     2021-10-04 05:36:10Z
           - fix issues when referencing a schema in a metaschema:
             whose vocabulary is not known, but its keywords can still be
