add "assert_keyword_exists" utility

--- a/Changes
+++ b/Changes
@@ -3,7 +3,7 @@ Revision history for JSON-Schema-Modern
 {{$NEXT}}
           - some refactoring of vocabulary and document methods, to faciliate
             re-use
-          - new utility function: is_uri_reference
+          - new utility functions: is_uri_reference, assert_keyword_exists
 
 0.523     2021-10-24 05:58:27Z
           - fix tests that were relying on an optional prereq
