properly gate this experimental feature by version
e.g. see https://www.cpantesters.org/cpan/report/cd1c454e-33d9-11ec-a165-5b3d1f24ea8f

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
           - fix tests that were relying on an optional prereq
+          - properly gate experimental features by version
 
 0.522     2021-10-22 22:26:29Z
           - 'date-time' format now properly handles leap seconds
