--- a/README.pod
+++ b/README.pod
@@ -10,7 +10,7 @@ JSON::Schema::Modern - Validate data against a schema
 
 =head1 VERSION
 
-version 0.522
+version 0.523
 
 =head1 SYNOPSIS
 
@@ -370,9 +370,8 @@ C<idn-hostname> requires L<Net::IDN::Encode>
 
 =head2 Specification Compliance
 
-Until version 1.000 is released, this implementation is not fully specification-compliant.
-
-To date, missing features (some of which are optional, but still quite useful) include:
+This implementation is now fully specification-compliant, but until version 1.000 is released, it is
+still deemed to be missing some optional but quite useful features, such as:
 
 =over 4
 
@@ -425,7 +424,7 @@ L<Test::JSON::Schema::Acceptance>: contains the official JSON Schema test suite
 
 =item *
 
-L<JSON::Schema::Tiny>: a more minimal implementation of the specification, with fewer dependencies
+L<JSON::Schema::Tiny>: a more stripped-down implementation of the specification, with fewer dependencies and faster evaluation
 
 =item *
 
