--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@ Revision history for JSON-Schema-Modern
             re-use
           - new utility functions: is_uri_reference, assert_keyword_exists
           - allow specifying the metaschema_uri for a schema document
+          - add "validate" method to Document object
 
 0.523     2021-10-24 05:58:27Z
           - fix tests that were relying on an optional prereq
