increment $VERSION after 0.524 release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.524     2021-11-10 04:36:49Z
           - some refactoring of vocabulary and document methods, to faciliate
             re-use
