allow for signatures, postfix deref syntax
..and clean up pragma declarations

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - minimum Perl version raised to 5.20
 
 0.524     2021-11-10 04:36:49Z
           - some refactoring of vocabulary and document methods, to faciliate
