--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.525     2021-11-17 05:35:24Z
           - minimum Perl version raised to 5.20
           - dropped bundling hyper-schema files, as they are not validatable
