JSON-Schema-Modern-0.529
          - added FREEZE and THAW callbacks to assist with serialization

--- a/README.pod
+++ b/README.pod
@@ -10,7 +10,7 @@ JSON::Schema::Modern - Validate data against a schema
 
 =head1 VERSION
 
-version 0.528
+version 0.529
 
 =head1 SYNOPSIS
 
@@ -130,7 +130,7 @@ Defaults to false.
 
 =head1 METHODS
 
-=for Pod::Coverage BUILDARGS
+=for Pod::Coverage BUILDARGS FREEZE THAW
 
 =head2 evaluate_json_string
 
