add media_type decoders for application/schema+json, application/schema-instance+json

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - add media_type decoders for application/schema+json,
+            application/schema-instance+json
 
 0.531     2021-12-06 05:39:53Z
           - add method to add format implementations after construction
