Revert "be more strict when serializing blessed objects"
This reverts commit 42e50c379d3eb9c8a002b46926000599c1b78218.

This is not the encoder used internally by TJSA, but rather our own encoder,
used for serializing Result objects -- so convert_blessed is needed!

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
           - make "unimplemented format" errors more visible
+          - fixed serializing of results in acceptance tests
 
 0.539     2022-01-06 04:07:20Z
           - updated error message for the "type" keyword to include the actual
